# chatterbox

./: pyproject.toml
src/chatterbox/: mtl_tts.py  tts.py  tts_turbo.py
